[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = "0.22"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
chrono = "0.4"
anyhow = "1.0.102"
